fix: center hero image on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ input {
 @media (max-width: 640px) {
     #hero {
         background-image: url("/img/bg_image_sm.png");
+        background-position: center;
     }
 }
 
